add fallback method for ratpack